# wunder-predictorium

./: .gitignore  README.md  daily_log.md  pyproject.toml  requirements.txt
docs/: DATA.md  FAQ.md  GET_HELP.md  PREDICTORIUM_COMPETITION.md  PRIZES.md  QUICK_START.md  README.md  RULES.md  SUBMISSION_GUIDE.md  TIMELINE.md
exploration/: ANALYSIS_SUMMARY.md  data_exploration.py
submissions/v0_baseline/: solution.py
